# girl

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  make_rule.cmake
doc/random/: memo.md
lib/: CMakeLists.txt  glossary_iterator.cpp  glossary_iterator.hpp  hogehoge.cpp  location.cpp  location.hpp  utils.cpp  utils.hpp
src/: CMakeLists.txt  girl-ls.cpp  girl.cpp
